migrate to typescript

--- a/index.html
+++ b/index.html
@@ -84,17 +84,15 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus animi ea eos inventore ab expedita quia ipsam iure cumque enim, veritatis tenetur in. Quidem impedit autem quam, suscipit laudantium ipsam?</p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus animi ea eos inventore ab expedita quia ipsam iure cumque enim, veritatis tenetur in. Quidem impedit autem quam, suscipit laudantium ipsam?</p>
     </div>
-    <script type="text/javascript" src="easy-parallax.js"></script>
-    <script type="text/javascript">
-      const stage = easyParallax()
+    <script type="module">
+      import { EasyParallax } from './build/esm/index.js'
+      const stage = EasyParallax()
 
       function createWidget(element, html) {
         const shadow = element.attachShadow({ mode: 'open' })
         shadow.innerHTML = html
         return element
       }
-      // stage.add(createWidget(document.querySelector('.shadow'), `<img src="https://mms.magloft.dev/1hz5BhXNCNozrwa6/fiIoS2O5CbHIe2Et" /><style>img{display:block;width: 100%;max-width:100%;}</style>`).shadowRoot.querySelector('img'))
-      // stage.add(createWidget(document.querySelector('.shadow'), `<div class="parallax" style="background-image: url(https://mms.magloft.dev/1hz5BhXNCNozrwa6/fiIoS2O5CbHIe2Et);"></div><style>.parallax{height:300px;background-position: center center;background-size: cover;background-repeat: no-repeat;}</style>`).shadowRoot.querySelector('div'))
       const widget = createWidget(document.querySelector('.shadow'), `<style>:host{height:300px;background-position: center center;background-size: cover;background-repeat: no-repeat;}</style>`)
       widget.style.backgroundImage = 'url(https://mms.magloft.com/0000000000000000/0000000000000006)'
       stage.add(widget)
